--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    //View model 
+    implementation "androidx.lifecycle:lifecycle-extensions:$view_model_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$view_model_version"
 
 
     //Coroutines
